--- a/src/app/cadastrar/cadastrar.page.html
+++ b/src/app/cadastrar/cadastrar.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-label>Cadastro de Contatos</ion-label>
   <ion-list>
     <ion-item>
