--- a/src/app/pages/detalhar/detalhar.page.html
+++ b/src/app/pages/detalhar/detalhar.page.html
@@ -8,13 +8,17 @@
   <ion-label>Detalhes do Contato</ion-label>
   <ion-list>
     <ion-item>
-      <ion-input placeholder="Nome" [(ngModel)]="nome" disabled="true"></ion-input>
+      <ion-label>Habilitar Edição</ion-label>
+      <ion-toggle color="success" (ionChange)="alterarEdicao()"></ion-toggle>
     </ion-item>
     <ion-item>
-      <ion-input placeholder="Telefone" [(ngModel)]="telefone" type="number" disabled="true"></ion-input>
+      <ion-input placeholder="Nome" [(ngModel)]="nome" disabled="{{edicao}}" ></ion-input>
     </ion-item>
     <ion-item>
-      <ion-select placeholder="Selecione Genero" [(ngModel)]="genero" disabled="true">
+      <ion-input placeholder="Telefone" [(ngModel)]="telefone" type="number" disabled="{{edicao}}" ></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-select placeholder="Selecione Genero" [(ngModel)]="genero" disabled="{{edicao}}" >
         <ion-select-option value="masculino">Masculino</ion-select-option>
         <ion-select-option value="feminino">Feminino</ion-select-option>
         <ion-select-option value="nao-declarar">Não Declarar</ion-select-option>
@@ -23,7 +27,7 @@
     
     <ion-item>
       <ion-label>Data de Nascimento</ion-label>
-      <ion-datetime-button datetime="datetime" disabled="true" ></ion-datetime-button>
+      <ion-datetime-button datetime="datetime" disabled="{{edicao}}" ></ion-datetime-button>
 
       <ion-modal [keepContentsMounted]="true">
         <ng-template>
@@ -33,6 +37,6 @@
     </ion-item>
 
   </ion-list>
-  <ion-button disabled="true" expand="block" (click)="salvar()">Salvar</ion-button>
-  <ion-button disabled="true" expand="block" (click)="Excluir()" color="danger">Excluir</ion-button>
+  <ion-button disabled="{{edicao}}" expand="block" (click)="editar()">Salvar</ion-button>
+  <ion-button disabled="{{edicao}}" expand="block" (click)="excluir()" color="danger">Excluir</ion-button>
 </ion-content>
