--- a/src/app/pages/cadastrar/cadastrar.page.html
+++ b/src/app/pages/cadastrar/cadastrar.page.html
@@ -8,51 +8,50 @@
   <ion-label>Cadastro de Contatos</ion-label>
   <ion-list>
     <form [formGroup]="form_cadastrar" (ngSubmit)="submitForm()">
-    <ion-item>
-      <ion-input placeholder="Nome" formControlName="nome"></ion-input>
-    </ion-item>
-    <ion-item *ngIf="(((errorControl.nome.touched)||(errorControl.nome.dirty))&& errorControl.nome.errors)">
-      <span *ngIf="errorControl.nome.errors?.required">
-        Nome é obrigatório!
-      </span>
-    </ion-item>
-    <ion-item>
-      <ion-input placeholder="Telefone" formControlName="telefone" [brmasker]="{phone:true}"></ion-input>
-    </ion-item>
-    <ion-item *ngIf="(((errorControl.telefone.touched)||(errorControl.telefone.dirty))&& errorControl.telefone.errors)">
-      <span *ngIf="errorControl.telefone.errors?.required">
-        Telefone é obrigatório!
-      </span>
-      <span *ngIf="errorControl.telefone.errors?.minlength">
-        Telefone precisa ter 10 caracteres!
-      </span>
-    </ion-item>
-    <ion-item>
-      <ion-select placeholder="Selecione Genero" formControlName="genero">
-        <ion-select-option value="masculino">Masculino</ion-select-option>
-        <ion-select-option value="feminino">Feminino</ion-select-option>
-        <ion-select-option value="nao-declarar">Não Declarar</ion-select-option>
-      </ion-select>
-    </ion-item>
-    <ion-item *ngIf="(((errorControl.genero.touched)||(errorControl.genero.dirty))&& errorControl.genero.errors)">
-      <span *ngIf="errorControl.genero.errors?.required">
-        Genero é obrigatório!
-      </span>
-    </ion-item>
-    
-    <ion-item>
-      <ion-label>Data de Nascimento</ion-label>
-      <ion-datetime-button datetime="datetime"  ></ion-datetime-button>
+      <ion-item>
+        <ion-input placeholder="Nome" formControlName="nome"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="(((errorControl.nome.touched)||(errorControl.nome.dirty))&& errorControl.nome.errors)">
+        <span *ngIf="errorControl.nome.errors?.required">
+          Nome é obrigatório!
+        </span>
+      </ion-item>
+      <ion-item>
+        <ion-input placeholder="Telefone" formControlName="telefone" [brmasker]="{phone:true}"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="(((errorControl.telefone.touched)||(errorControl.telefone.dirty))&& errorControl.telefone.errors)">
+        <span *ngIf="errorControl.telefone.errors?.required">
+          Telefone é obrigatório!
+        </span>
+        <span *ngIf="errorControl.telefone.errors?.minlength">
+          Telefone precisa ter 10 caracteres!
+        </span>
+      </ion-item>
+      <ion-item>
+        <ion-select placeholder="Selecione Genero" formControlName="genero">
+          <ion-select-option value="masculino">Masculino</ion-select-option>
+          <ion-select-option value="feminino">Feminino</ion-select-option>
+          <ion-select-option value="nao-declarar">Não Declarar</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item *ngIf="(((errorControl.genero.touched)||(errorControl.genero.dirty))&& errorControl.genero.errors)">
+        <span *ngIf="errorControl.genero.errors?.required">
+          Genero é obrigatório!
+        </span>
+      </ion-item>
 
-      <ion-modal [keepContentsMounted]="true">
-        <ng-template>
-          <ion-datetime id="datetime" max="{{data}}" presentation="date" formControlName="dataNascimento"></ion-datetime>
-        </ng-template>
-      </ion-modal>
-    </ion-item>
-    <ion-button expand="block" type="submit">Cadastrar</ion-button>
-  </form>
+      <ion-item>
+        <ion-label>Data de Nascimento</ion-label>
+        <ion-datetime-button datetime="datetime"></ion-datetime-button>
+
+        <ion-modal [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime id="datetime" max="{{data}}" presentation="date" formControlName="dataNascimento">
+            </ion-datetime>
+          </ng-template>
+        </ion-modal>
+      </ion-item>
+      <ion-button expand="block" type="submit">Cadastrar</ion-button>
+    </form>
   </ion-list>
- 
-  
 </ion-content>
