--- a/src/app/pages/cadastrar/cadastrar.page.html
+++ b/src/app/pages/cadastrar/cadastrar.page.html
@@ -1,57 +1,61 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Cadastrar</ion-title>
+    <ion-title>cadastrar</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content>
   <ion-label>Cadastro de Contatos</ion-label>
   <ion-list>
     <form [formGroup]="form_cadastrar" (ngSubmit)="submitForm()">
-      <ion-item>
-        <ion-input placeholder="Nome" formControlName="nome"></ion-input>
-      </ion-item>
-      <ion-item *ngIf="(((errorControl.nome.touched)||(errorControl.nome.dirty))&& errorControl.nome.errors)">
-        <span *ngIf="errorControl.nome.errors?.required">
+    <ion-item>
+      <ion-input placeholder="Nome" formControlName="nome"></ion-input>
+    </ion-item>
+    <ion-item *ngIf="(((errorControl.nome.touched)||
+    (errorControl.nome.dirty))&& errorControl.nome.errors)">
+      <span *ngIf="errorControl.nome.errors?.required">
           Nome é obrigatório!
-        </span>
-      </ion-item>
-      <ion-item>
-        <ion-input placeholder="Telefone" formControlName="telefone" [brmasker]="{phone:true}"></ion-input>
-      </ion-item>
-      <ion-item *ngIf="(((errorControl.telefone.touched)||(errorControl.telefone.dirty))&& errorControl.telefone.errors)">
-        <span *ngIf="errorControl.telefone.errors?.required">
+      </span>
+    </ion-item>
+
+    <ion-item>
+      <ion-input placeholder="Telefone" [brmasker]="{phone: true}"
+       formControlName="telefone"></ion-input>
+    </ion-item>
+    <ion-item *ngIf="(((errorControl.telefone.touched)||
+    (errorControl.telefone.dirty))&& errorControl.telefone.errors)">
+      <span *ngIf="errorControl.telefone.errors?.required">
           Telefone é obrigatório!
-        </span>
-        <span *ngIf="errorControl.telefone.errors?.minlength">
-          Telefone precisa ter 10 caracteres!
-        </span>
-      </ion-item>
-      <ion-item>
-        <ion-select placeholder="Selecione Genero" formControlName="genero">
-          <ion-select-option value="masculino">Masculino</ion-select-option>
-          <ion-select-option value="feminino">Feminino</ion-select-option>
-          <ion-select-option value="nao-declarar">Não Declarar</ion-select-option>
-        </ion-select>
-      </ion-item>
-      <ion-item *ngIf="(((errorControl.genero.touched)||(errorControl.genero.dirty))&& errorControl.genero.errors)">
-        <span *ngIf="errorControl.genero.errors?.required">
+      </span>
+      <span *ngIf="errorControl.telefone.errors?.minlength">
+        Telefone precisa ter 10 caracteres!
+    </span>
+    </ion-item>
+    <ion-item>
+      <ion-select placeholder="Selecione o Genero" formControlName="genero">
+        <ion-select-option value="masculino">Masculino</ion-select-option>
+        <ion-select-option value="feminino">Feminino</ion-select-option>
+        <ion-select-option value="não-declarar">Não Declarar</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item *ngIf="(((errorControl.genero.touched)||
+    (errorControl.genero.dirty))&& errorControl.genero.errors)">
+      <span *ngIf="errorControl.genero.errors?.required">
           Genero é obrigatório!
-        </span>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>Data de Nascimento</ion-label>
-        <ion-datetime-button datetime="datetime"></ion-datetime-button>
-
-        <ion-modal [keepContentsMounted]="true">
-          <ng-template>
-            <ion-datetime id="datetime" max="{{data}}" presentation="date" formControlName="dataNascimento">
-            </ion-datetime>
-          </ng-template>
-        </ion-modal>
-      </ion-item>
-      <ion-button expand="block" type="submit">Cadastrar</ion-button>
+      </span>
+    </ion-item>
+    <ion-item>
+      <ion-label>Data de nascimento:</ion-label>
+      <ion-datetime-button datetime="datetime"></ion-datetime-button>
+      <ion-modal [keepContentsMounted]="true">
+        <ng-template>
+          <ion-datetime id="datetime" max="{{data}}"
+          presentation="date" formControlName="data_nascimento"></ion-datetime>
+        </ng-template>
+      </ion-modal>
+    </ion-item>
+    <ion-button expand="block" type="submit">Cadastrar</ion-button>
     </form>
   </ion-list>
+
 </ion-content>
