--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,35 +1,30 @@
-<ion-header>
+<ion-header >
   <ion-toolbar>
-    <ion-title style="background-color: lightskyblue; color: white;">
+    <ion-title>
       Agenda de Contatos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content >
 
   <ion-list>
-    <ion-item-sliding *ngFor="let contato of contatos" padding-top="30px">
-
+    <ion-item-sliding *ngFor="let contato of contatos">
       <ion-item>
-        <ion-icon name="person-circle-sharp" height="2em" style="zoom:2.0;"></ion-icon>
-        <ion-label>
-          <h1>{{contato.nome}}</h1>
-          <h3>{{contato.telefone}}</h3>
-        </ion-label>
-
+        <ion-label>{{contato.nome}}</ion-label>
       </ion-item>
-      
-     <ion-item-options slide="end">
-      <ion-item-option (click)="irParaDetalhar(contato)">
-        <ion-icon name="create-outline"></ion-icon>
-      </ion-item-option>
-     </ion-item-options>
+      <ion-item-options side="end">
+        <ion-item-option (click)="irParaDetalhar(contato)">
+          <ion-icon name="create-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button color="secondary" (click)="irParaCadastrar()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+
 </ion-content>
